# Velix

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build_plugins.sh  main.cpp  sync_resources.sh
Core/: CMakeLists.txt  README.md
Core/include/Core/: Allocators.hpp  Assert.hpp  Buffer.hpp  CommandBuffer.hpp  CommandPool.hpp  Deallocators.hpp  DescriptorPool.hpp  DescriptorSetLayout.hpp  Device.hpp  Framebuffer.hpp  GraphicsPipeline.hpp  Image.hpp  Logger.hpp  Macros.hpp  PipelineLayout.hpp  Render.hpp  RenderPass.hpp  Sampler.hpp  Shader.hpp  ShaderHandler.hpp  SwapChain.hpp  SyncObject.hpp  Texture.hpp  TextureImage.hpp  VulkanAssert.hpp  VulkanContext.hpp  VulkanHelpers.hpp  Window.hpp
Core/src/: Buffer.cpp  CommandBuffer.cpp  CommandPool.cpp  DescriptorPool.cpp  DescriptorSetLayout.cpp  Device.cpp  Framebuffer.cpp  GraphicsPipeline.cpp  Image.cpp  Logger.cpp  PipelineLayout.cpp  Render.cpp  RenderPass.cpp  Sampler.cpp  Shader.cpp  ShaderHandler.cpp  SwapChain.cpp  SyncObject.cpp  TextureImage.cpp  VulkanContext.cpp  Window.cpp
Core/src/Cache/: GraphicsPipelineCache.cpp
Core/src/Memory/: DefaultAllocator.cpp  VMAAllocator.cpp
Core/src/RTX/: AccelerationStructure.cpp  AccelerationStructureBuilder.cpp  RayTracingPipeline.cpp  ShaderBindingTable.cpp
Editor/: CMakeLists.txt
Editor/include/Editor/: AssetsPreviewSystem.hpp  AssetsWindow.hpp  Editor.hpp  EditorResourcesStorage.hpp  FileHelper.hpp  ImGuiRenderGraphPass.hpp  Notification.hpp  Project.hpp  ProjectLoader.hpp
Editor/src/: AssetsWindow.cpp  Editor.cpp  EditorResourcesStorage.cpp  FileHelper.cpp  ImGuiRenderGraphPass.cpp  ProjectLoader.cpp
Editor/src/Actions/: EditorActionHistory.cpp
Editor/src/Panels/: AnimationTreePanel.cpp  DetailsPanel.cpp  EditorDetailsPanel.cpp  EditorHierarchyPanel.cpp  EditorTerminalPanel.cpp  HierarchyPanel.cpp  MaterialEditor.cpp  PluginDownloader.cpp  PluginsWindow.cpp  TerminalPanel.cpp
Editor/src/PluginSystem/: EditorPluginRegistry.cpp
Editor/src/RenderGraphPasses/: AnimationTreePreviewPass.cpp  DebugOverlayRenderGraphPass.cpp  EditorBillboardRenderGraphPass.cpp  ObjectIdResolveRenderGraphPass.cpp  PreviewAssetsRenderGraphPass.cpp  SelectionOverlayRenderGraphPass.cpp
Editor/src/Runtime/: EditorRuntime.cpp
Editor/src/Terrain/: TerrainTools.cpp
Engine/: CMakeLists.txt
Engine/include/Engine/: AssetsLoader.hpp  Camera.hpp  CrashHandler.hpp  DebugDraw.hpp  Diagnostics.hpp  EngineCamera.hpp  EngineConfig.hpp  Entity.hpp  EnvironmentSettings.hpp  GraphicsPipelineBuilder.hpp  Hash.hpp  Lights.hpp  Material.hpp  Mesh.hpp  Primitives.hpp  Project.hpp  ProjectLoader.hpp  PushConstant.hpp  RenderGraph.hpp  Scene.hpp  SceneManager.hpp  ShaderDataExtractor.hpp  ShaderFamily.hpp  Skeleton.hpp  SkyLightSystem.hpp  Skybox.hpp  SwapChainTracker.hpp  Texture.hpp  TextureImage.hpp  Time.hpp  UniformBufferObject.hpp  Vertex.hpp
Engine/src/: AssetsLoader.cpp  Camera.cpp  CrashHandler.cpp  DebugDraw.cpp  Diagnostics.cpp  EngineCamera.cpp  EngineConfig.cpp  Entity.cpp  GraphicsPipelineBuilder.cpp  Hash.cpp  Material.cpp  ProjectLoader.cpp  RenderGraph.cpp  Scene.cpp  SceneManager.cpp  ShaderDataExtractor.cpp  ShaderFamily.cpp  Skeleton.cpp  SkyLightSystem.cpp  Skybox.cpp  SwapChainTracker.cpp  Texture.cpp  TextureImage.cpp  Time.cpp
Engine/src/Assets/: AssetManager.cpp  AssetStreamingWorker.cpp  AssetsCache.cpp  AssetsLoader.cpp  AssetsSerializer.cpp  Compressor.cpp  ElixBundle.cpp  ElixPacket.cpp  FBXAssetLoader.cpp  MaterialAssetLoader.cpp  OBJAssetLoader.cpp  TerrainAssetLoader.cpp
Engine/src/Audio/: AudioMusic.cpp  AudioSound.cpp  AudioSystem.cpp
Engine/src/Builders/: DescriptorSetBuilder.cpp  GraphicsPipelineBuilder.cpp  GraphicsPipelineManager.cpp  RenderPassBuilder.cpp
Engine/src/Caches/: GraphicsPipelineCache.cpp  ShaderCache.cpp
Engine/src/Components/: AnimatorComponent.cpp  AudioComponent.cpp  CameraComponent.cpp  CharacterMovementComponent.cpp  CollisionComponent.cpp  DecalComponent.cpp  ParticleSystemComponent.cpp  RagdollComponent.cpp  ReflectionProbeComponent.cpp  RigidBodyComponent.cpp  ScriptComponent.cpp  SkeletalMeshComponent.cpp  SpriteMeshComponent.cpp  StaticMeshComponent.cpp  TerrainComponent.cpp  Transform2DComponent.cpp  Transform3DComponent.cpp
Engine/src/Input/: InputManager.cpp  Keyboard.cpp  Mouse.cpp
Engine/src/Particles/: ParticleEmitter.cpp  ParticleSystem.cpp
Engine/src/Physics/: PhysXCore.cpp  PhysXMessenger.cpp  PhysicsContactListener.cpp  PhysicsScene.cpp
Engine/src/PluginSystem/: ComponentRegistry.cpp  PluginLoader.cpp  PluginManager.cpp
Engine/src/Properties/: Transform3DProperty.cpp
Engine/src/RayTracing/: AccelerationStructure.cpp  MeshToRayTracedObjectsConverter.cpp  RayTracedMesh.cpp  RayTracingGeometryCache.cpp  RayTracingScene.cpp  SkinnedBlasBuilder.cpp
Engine/src/Render/: BindlessRegistry.cpp  GpuCullingSystem.cpp  IBLManager.cpp  MeshGeometryRegistry.cpp  RenderGraphPassBuilder.cpp  RenderGraphPassRecourceBuilder.cpp  RenderGraphPassRecourceCompiler.cpp  RenderGraphPassResourceHash.cpp  SceneMaterialResolver.cpp  UnifiedGeometryBuffer.cpp
Engine/src/Runtime/: ApplicationConfig.cpp  ApplicationLoop.cpp  EngineConfig.cpp  GameRuntime.cpp  ProjectConfig.cpp
Engine/src/SDK/: VXActor.cpp  VXCharacter.cpp
Engine/src/Scripting/: ScriptsRegister.cpp  VelixAPI.cpp
Engine/src/Shaders/: ShaderCompiler.cpp  ShaderDataExtractor.cpp  ShaderFamily.cpp  ShaderHotReloader.cpp
Engine/src/Signals/: Connection.cpp
Engine/src/Terrain/: TerrainAssetIO.cpp  TerrainMeshBuilder.cpp
Engine/src/Threads/: ThreadPoolManager.cpp
Engine/src/UI/: Billboard.cpp  Font.cpp  FontAtlas.cpp  UIButton.cpp  UIText.cpp  Widget.cpp
Engine/src/Utilities/: AsyncGpuUpload.cpp  BufferUtilities.cpp  ImageUtilities.cpp
ProjectTemplate/export/: CMakeLists.txt  main.cpp
VelixSDK/: CMakeLists.txt  VelixSDKConfig.cmake.in
VelixSDK/include/VelixSDK/: API.hpp  EditorPlugin.hpp  Entity.hpp  Plugin.hpp  Register.hpp  VXActor.hpp  VXObject.hpp  VelixSDK.hpp  World.hpp
VelixSDK/src/: Entity.cpp  VXActor.cpp  VXObject.cpp
(+545 files in other folders)
